--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@babel/preset-typescript": "^7.10.1",
         "@types/react": "^16.9.41",
         "@types/react-dom": "^16.9.8",
+        "@types/react-router-dom": "^5.1.5",
         "babel-loader": "^8.1.0",
         "css-loader": "^3.6.0",
         "html-webpack-plugin": "^4.3.0",
@@ -26,6 +27,7 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-hot-loader": "^4.12.21",
+        "react-router-dom": "^5.2.0",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.2.1",
         "typescript": "^3.9.5",
