--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "author": "Junghyun Park <qwertyazsxc@gmail.com>",
     "license": "MIT",
     "scripts": {
-        "dev": "./node_modules/.bin/webpack-dev-server --open",
+        "dev": "./node_modules/.bin/webpack-dev-server",
         "build": "./node_modules/.bin/webpack -w"
     },
     "devDependencies": {
