--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "blog-app-front",
     "version": "1.0.0",
-    "description": "frontend app of snorlaxious blog",
+    "description": "frontend app of snore blog",
     "main": "index.js",
     "repository": "https://github.com/qwertyazsx/blog-app-front.git",
     "author": "Junghyun Park <qwertyazsxc@gmail.com>",
@@ -19,6 +19,7 @@
         "@babel/preset-typescript": "^7.10.1",
         "@types/react": "^16.9.41",
         "@types/react-dom": "^16.9.8",
+        "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.5",
         "babel-loader": "^8.1.0",
         "css-loader": "^3.6.0",
@@ -28,6 +29,7 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-hot-loader": "^4.12.21",
+        "react-redux": "^7.2.0",
         "react-router-dom": "^5.2.0",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.2.1",
