--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,14 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-typescript"],
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "targets": { "chrome": "55" },
+                "debug": true
+            }
+        ],
+        "@babel/preset-react",
+        "@babel/preset-typescript"
+    ],
     "plugins": ["@babel/plugin-proposal-class-properties"]
 }
