--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/react-dom": "^16.9.8",
         "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.5",
+        "axios": "^0.19.2",
         "babel-loader": "^8.1.0",
         "css-loader": "^3.6.0",
         "file-loader": "^6.0.0",
