--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "@babel/preset-env": "^7.10.3",
         "@babel/preset-react": "^7.10.1",
         "@babel/preset-typescript": "^7.10.1",
+        "@toast-ui/editor": "^2.3.1",
+        "@toast-ui/react-editor": "^2.3.1",
         "@types/react": "^16.9.41",
         "@types/react-dom": "^16.9.8",
         "@types/react-redux": "^7.1.9",
