--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "babel-loader": "^8.1.0",
         "css-loader": "^3.6.0",
         "file-loader": "^6.0.0",
+        "html-react-parser": "^0.13.0",
         "html-webpack-plugin": "^4.3.0",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
