--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
         "@babel/preset-typescript": "^7.10.1",
         "@toast-ui/editor": "^2.3.1",
         "@toast-ui/react-editor": "^2.3.1",
+        "@types/highlightjs": "^10.1.0",
         "@types/react": "^16.9.41",
         "@types/react-dom": "^16.9.8",
         "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.5",
+        "@types/showdown": "^1.9.3",
         "axios": "^0.19.2",
         "babel-loader": "^8.1.0",
         "css-loader": "^3.6.0",
         "file-loader": "^6.0.0",
+        "highlight.js": "^10.5.0",
         "html-react-parser": "^0.13.0",
         "html-webpack-plugin": "^4.3.0",
         "node-sass": "^4.14.1",
@@ -36,6 +39,7 @@
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.2.0",
         "sass-loader": "^8.0.2",
+        "showdown": "^1.9.1",
         "style-loader": "^1.2.1",
         "typescript": "^3.9.5",
         "webpack": "^4.43.0",
